fix mobile wrapping problem

--- a/media/newstyle.css
+++ b/media/newstyle.css
@@ -51,6 +51,6 @@ a {
   padding-left: 0.75rem;
 }
 li.nav-item {
-    width: 90px;
+    width: 80px;
     text-align: center;
 }
